# chuk-mcp-tides

./: .dockerignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
examples/: capabilities_demo.py  currents_demo.py  mersea_island_scenario.py  quick_start.py  tool_runner.py
src/chuk_mcp_tides/: __init__.py  async_server.py  constants.py  server.py
src/chuk_mcp_tides/core/: __init__.py  constituent_storage.py  http_client.py  reference_cache.py  tide_manager.py  utils.py
src/chuk_mcp_tides/models/: __init__.py  responses.py
src/chuk_mcp_tides/providers/: __init__.py  base.py  ea.py  local.py  noaa.py  ukho.py
src/chuk_mcp_tides/tools/: __init__.py
src/chuk_mcp_tides/tools/analysis/: __init__.py  api.py
src/chuk_mcp_tides/tools/currents/: __init__.py  api.py
src/chuk_mcp_tides/tools/discovery/: __init__.py  api.py
src/chuk_mcp_tides/tools/flood/: __init__.py  api.py
src/chuk_mcp_tides/tools/observations/: __init__.py  api.py
src/chuk_mcp_tides/tools/predictions/: __init__.py  api.py
src/chuk_mcp_tides/tools/stations/: __init__.py  api.py
tests/: conftest.py  test_analysis_tools.py  test_classify_stage.py  test_constants.py  test_constituent_storage.py  test_currents_tools.py  test_discovery_tools.py  test_ea_provider.py  test_flood_tools.py  test_http_client.py  test_local_provider.py  test_models.py  test_noaa_provider.py  test_observation_tools.py  test_prediction_tools.py  test_reference_cache.py  test_station_tools.py  test_tide_manager.py  test_ukho_provider.py  test_utils.py
