[project]
name = "chuk-mcp-tides"
version = "0.4.0"
description = "Tidal Data Discovery & Analysis MCP Server"
authors = []
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.9.1",
    "chuk-mcp-server>=0.15.1",
    "chuk-artifacts",
    "python-dotenv>=1.1.1",
    "pydantic>=2.0.0",
    # HTTP client for API calls
    "httpx>=0.27.0",
    # Numerical operations
    "numpy>=1.24.0",
]

[project.optional-dependencies]
harmonic = [
    "utide>=0.3.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
    # Harmonic engine for testing
    "utide>=0.3.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
chuk-mcp-tides = "chuk_mcp_tides.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chuk_mcp_tides"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
source = ["src/chuk_mcp_tides"]
omit = [
    "*/tests/*",
    "*/examples/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
